--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+body {
+  height: 100vh;
+  /* width: 100vw; */
+}
+
 nav {
   padding: 10px 50px;
   display: flex;
@@ -23,4 +28,70 @@ nav {
 
 .link {
   margin-left: 1rem;
+}
+
+.container {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 70px 0px;
+  padding-left: 90px;
+  overflow: hidden;
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  /* padding: 20px; */
+  margin-right: 3rem;
+  height: 50%;
+}
+
+.icon {
+  padding: 2rem 20px;
+}
+
+.form-contianer {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  flex-grow: 0.7;
+}
+
+#inputs-container {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  width: 100%;
+}
+
+input {
+  padding: 0.5rem;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-bottom: 4rem;
+}
+
+#name {
+  margin-right: 4rem;
+}
+
+#message {
+  margin-bottom: 4rem;
+}
+
+.btn {
+  width: 4rem;
+  border: 1px solid black;
+  border-radius: 0;
+  text-align: center;
+  cursor: pointer;
+  padding: 5px 10px;
+  align-self: center;
+}
+
+.graphic {
+  height: 80%;
 }
