--- a/public/index.css
+++ b/public/index.css
@@ -1,13 +1,26 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
-  /* width: 100vw; */
+}
+
+ul {
+  list-style: none;
+}
+
+h3 {
+  margin-bottom: 1rem;
 }
 
 nav {
   padding: 10px 50px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -17,17 +30,15 @@ nav {
 }
 
 .navlinks {
-  list-style: none;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  padding: 0px 300px;
+  flex-grow: 0.7;
 }
 
 .link {
-  margin-left: 1rem;
+  margin-right: 3rem;
 }
 
 .container {
@@ -44,7 +55,6 @@ nav {
   display: flex;
   flex-direction: column;
   align-self: center;
-  /* padding: 20px; */
   margin-right: 3rem;
   height: 50%;
 }
@@ -94,4 +104,35 @@ input {
 
 .graphic {
   height: 80%;
+}
+
+.bottom-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 7rem;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem 0rem;
+  padding-right: 2rem;
+  box-shadow: 0px -12px 25px 1px rgba(0, 0, 0, 0.2);
+}
+
+footer > ul {
+  display: flex;
+  flex-direction: row;
+}
+
+footer > h4 {
+  padding-right: 5rem;
+}
+
+footer > ul > li {
+  padding: 0px 0.5rem;
 }
